<resources>
    <string name="app_name">Seriousapp</string>
    <string name="register">Register</string>
    <string name="username_p">username_:P</string>
    <string name="password">password</string>
    <string name="todo">TODO</string>
    <string name="title_activity_menu_principal">MenuPrincipal</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="call_daniel">call Daniel</string>
    <string name="pass">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_maps">Map</string>

    <string name="send_label">Send</string>


    <!-- CORE STUFF -->
    <string name="URL_ADDRESS" translatable="false">wss://demos.kaazing.com/jms</string>
    <string name="TOPIC_CARE_PROVIDER" translatable="false">/topic/careproviders</string>
    <string name="TOPIC_CARE_TAKER" translatable="false">/topic/caretakers</string>
    <string name="TOPIC_PREFIX" translatable="false">/topic/</string>
    <string name="QUEUE_PREFIX" translatable="false">/queue/</string>

    <!-- Labels -->
    <string name="connected_state">Connected</string>
    <string name="disconnected_state">Disconnected</string>
    <string name="connecting">Connecting</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="subscribe">Subscribe</string>
    <string name="title_activity_call_for_help">Map</string>
    <string name="menor"><![CDATA[<]]></string>
    <string name="maior"><![CDATA[>]]></string>

</resources>
